crates/voice-derive/tests/compile_fail/duplicate_order.stderr
error: duplicate voice_param order 0: already used by `a`
 --> tests/compile_fail/duplicate_order.rs:8:5
  |
8 |     b: f64,
  |     ^
